# cryptoscreener

./: .dockerignore  .gitignore  BINANCE_LIMITS.md  CHANGELOG.md  CLAUDE.md  DATA_CONTRACTS.md  DECISIONS.md  DOCS_INDEX.md  Dockerfile  MANIFEST.md  PRD.md  README.md  REVIEWER_CHECKLIST.md  SPEC.md  STATE.md  STATUS_UPDATE_TEMPLATE.md  docker-compose.yml  proof_test.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: acceptance_packet.yml  ci.yml  (+9 more)
artifacts/: proof_bundle_pr33_20260124_171639.txt  proof_bundle_pr35_20260124_172949.txt  proof_bundle_pr37_20260124_173451.txt  proof_bundle_pr39_20260124_174128.txt  proof_bundle_pr41_20260124_175744.txt  proof_bundle_pr41_20260124_175800.txt  proof_bundle_pr42_20260124_181221.txt  proof_bundle_pr43_20260124_184940.txt  proof_bundle_pr43_20260124_185336.txt  proof_bundle_pr43_20260124_185343.txt  proof_bundle_pr44_20260124_190440.txt  proof_bundle_pr45_20260124_191632.txt  proof_bundle_pr46_20260124_192158.txt  proof_bundle_pr48_20260124_193956.txt  proof_bundle_pr67_20260126_013533.txt
docs/: RUNBOOK_DELIVERY.md  RUNBOOK_DEPLOYMENT.md  RUNBOOK_GRAFANA.md  RUNBOOK_K8S.md  RUNBOOK_SECRETS.md  branch_protection.md
k8s/: configmap.yaml  deployment.yaml  externalsecret.yaml  kustomization.yaml  prometheusrule.yaml  secret.yaml  secretstore.yaml  service.yaml  servicemonitor.yaml
monitoring/: alert_rules.yml  prometheus.yml  prometheus_scrape_k8s_example.yml  soak_thresholds.yml
scripts/: __init__.py  acceptance_packet.sh  build_labels.py  check_soak_thresholds.py  fit_calibration.py  gen_proof_bundle.sh  generate_sim_fixtures.py  pr_create.sh  proof_bundle.sh  proof_bundle_chat.sh  proof_dec023b_determinism.py  proof_dec023c_determinism.py  proof_dec023d_determinism.py  reviewer_message.sh  run_backtest.py  run_fake_soak.py  run_live.py  run_record.py  run_replay.py  run_scenario.py  run_sim.py  secret_guard.py  split_dataset.py  train_model.py  verify_fixture_checksums.py  verify_replay_determinism.py
tests/: __init__.py  test_check_soak_thresholds.py  test_config_validation.py  test_logging_config.py  test_secret_guard.py
(+275 files in other folders)
